# Veluate

./: .gitignore  PROJECT_DESC.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  _context.py  clarity.py  cross_reference.py  exam.py  fact_check.py  structure.py  transcription.py
backend/app/api/routes/: health.py  jobs.py
backend/app/api/schemas/: _datetime.py  jobs.py
backend/app/db/: models.py  session.py
backend/app/graph/: graph.py  state.py
backend/app/graph/nodes/: __init__.py  _wrap.py  clarity.py  cross_reference.py  exam.py  fact_check.py  structure.py  transcription.py
backend/app/scripts/: run_demo.py
backend/app/services/: brightdata.py  chunking.py  demo.py  demo_jobs.py  events.py  files.py  infographic.py  lecture_search.py  llm.py  parsing.py  pipeline.py  videodb.py
frontend/: DESIGN.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/components/: ask-lecture-section.tsx  clip-player.tsx  collapsible-section.tsx  confusion-heatmap.tsx  evidence-section.tsx  fact-check-section.tsx  job-progress.tsx  job-view.tsx  report-dashboard.tsx  site-header.tsx  transcript-section.tsx  upload-form.tsx
frontend/src/components/brand/: logo.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/lib/: api.ts  format.ts  pipeline-timing.ts  reports.ts  types.ts
sample_data/: README.md
