[project]
name = "veluate-backend"
version = "0.1.0"
description = "Veluate API — multi-agent teacher evaluation pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "pypdf>=5.0.0",
    "greenlet>=3.5.1",
    "videodb>=0.4.5",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
